# kalman-reconstruction-partially-observed-systems

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_environment.py
.github/workflows/: linting.yaml  test.yaml
ci/: environment-py3.10.yml  environment-py3.9.yml
docs/: Makefile  conf.py  environment.yml  index.rst  kalman.rst  make.bat  pipeline.rst  readme_link.rst  statistics.rst
docs/source/: README.md  custom_plot.rst  example_models.rst  kalman.rst  kalman_time_dependent.rst  modules.rst  pipeline.rst  readme_link.rst  reconstruction.rst
docs/source/assets/: docs_README.md  pipeline_usage.md
kalman_reconstruction/: Kalman.py  _version.py  cli.py  custom_plot.py  example_models.py  kalman.py  kalman_time_dependent.py  kalman_timedependent.py  pipeline.py  reconstruction.py  statistics.py
notebooks/: 01_model_time_dependency.ipynb  02_retrieve_equations.ipynb  03_solve_sys_eq.ipynb  04_NN_test_pipeline.ipynb  05_NN_compare_timedependency.ipynb  05_NN_time_independent.ipynb  06_NN_time_dependent.ipynb  07_NN_timedependency_comparisson.ipynb  check.ipynb
tests/: test_custom_plot.py  test_pipeline.py  test_statistics.py
