[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = kalman_reconstruction/_version.py


[metadata]
name = kalman_reconstruction
description = Data-driven Reconstruction of Partially Observed Dynamical Systems using Kalman algorithms and an itterative procedure
author = IMT-Atlantique-MEE
url = https://github.com/nilsnevertree/kalman-reconstruction-partially-observered-systems
long_description = file: README.md
long_description_content_type = text/markdown
license =
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Dont change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = AUTHOR@EMAIL.COM


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    requests
setup_requires=
    setuptools_scm
python_requires = >=3.8
################ Up until here

zip_safe = False
packages = find:


[options.entry_points]
console_scripts =
        kalman_reconstruction_run = kalman_reconstruction.cli:run
